cleanup and track textbox layout changes with EffectiveViewportChanged

--- a/src/Avalonia.Themes.Fluent/Controls/MenuItem.xaml
+++ b/src/Avalonia.Themes.Fluent/Controls/MenuItem.xaml
@@ -147,7 +147,7 @@
       <Setter Property="IsVisible" Value="True" />
     </Style>
     
-    <Style Selector="^.textMenu">
+    <Style Selector="^.text-menu">
       <Setter Property="Padding" Value="11,4,0,7"/>
     </Style>
 
