--- a/src/Avalonia.Themes.Fluent/Controls/TextBox.xaml
+++ b/src/Avalonia.Themes.Fluent/Controls/TextBox.xaml
@@ -34,9 +34,9 @@
     <MenuItem x:Name="TextBoxContextFlyoutPasteItem" Header="Paste" Command="{Binding $parent[TextBox].Paste}" IsEnabled="{Binding $parent[TextBox].CanPaste}" InputGesture="{x:Static TextBox.PasteGesture}"/>
   </MenuFlyout>
   <MenuFlyout x:Key="MobileTextBoxContextFlyout" FlyoutPresenterTheme="{StaticResource HorizontalFlyout}">
-    <MenuItem x:Name="MobileTextBoxContextFlyoutCutItem" Classes="textMenu" Header="Cut" Command="{Binding $parent[TextBox].Cut}" IsEnabled="{Binding $parent[TextBox].CanCut}" />
-    <MenuItem x:Name="MobileTextBoxContextFlyoutCopyItem" Classes="textMenu" Header="Copy" Command="{Binding $parent[TextBox].Copy}" IsEnabled="{Binding $parent[TextBox].CanCopy}" />
-    <MenuItem x:Name="MobileTextBoxContextFlyoutPasteItem" Classes="textMenu" Header="Paste" Command="{Binding $parent[TextBox].Paste}" IsEnabled="{Binding $parent[TextBox].CanPaste}" />
+    <MenuItem x:Name="MobileTextBoxContextFlyoutCutItem" Classes="text-menu" Header="Cut" Command="{Binding $parent[TextBox].Cut}" IsEnabled="{Binding $parent[TextBox].CanCut}" />
+    <MenuItem x:Name="MobileTextBoxContextFlyoutCopyItem" Classes="text-menu" Header="Copy" Command="{Binding $parent[TextBox].Copy}" IsEnabled="{Binding $parent[TextBox].CanCopy}" />
+    <MenuItem x:Name="MobileTextBoxContextFlyoutPasteItem" Classes="text-menu" Header="Paste" Command="{Binding $parent[TextBox].Paste}" IsEnabled="{Binding $parent[TextBox].CanPaste}" />
   </MenuFlyout>
 
   <ControlTheme x:Key="FluentTextBoxButton" TargetType="Button">
